--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-numpy==1.17.3
-lalsuite==6.63
-gwpy==1.0.0
-PyCBC==1.14.4
+numpy==1.17.5
+lalsuite==6.66
+gwpy==1.0.1
+PyCBC==1.15.3
 gwosc==0.4.3
-bilby==0.6.1
+bilby==0.6.3
 healpy==1.13.0
-astropy==3.2.3
-scipy==1.3.3
-
+astropy==4.0
+scipy==1.4.1
+corner==2.0.1
